solve slick dots overlap issues with product titles

--- a/front/src/component/headershop/headershop.css
+++ b/front/src/component/headershop/headershop.css
@@ -6,7 +6,7 @@
   /* display: flex; */
 }
 .mainer {
-  padding: 50px 0;
+  padding: 10px 0 50px 0;
   /* height: 80vh; */
 }
 
@@ -41,52 +41,25 @@
 }
 
 .shop_flex {
-  /* margin: 60px 0; */
-  /* border: 1px solid #333; */
   margin: 10px;
-  /* width: 500px; */
-  /* flex-wrap: nowrap; */
-  /* display: grid; */
-  /* grid-template-columns: repeat(3, 1fr); */
   width: 100%;
 }
 
 .sub_shop {
   height: 70vh;
   width: 100%;
-  /* display: flex; */
-  /* gap: 10px; */
-  /* border: 1px solid #333; */
   position: relative;
 }
-
-.slick-dots {
-  position: absolute;
-  bottom: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.custom-dot {
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  background-color: #fff; /* Customize the color */
-  margin: 0 auto;
-  cursor: pointer;
-  padding: 3px;
-}
-
-.slick-next {
+ul.slick-dots {
   display: none;
+  /* border: 1px solid #333; */
+  position: absolute;
+  bottom: 15px;
 }
 
 .sub_shop img {
   height: 100%;
+  position: relative;
   width: 100%;
   object-fit: cover;
 }
